--- a/e-commerce-frontend/package.json
+++ b/e-commerce-frontend/package.json
@@ -7,9 +7,11 @@
     "animate.css": "^3.5.2",
     "axios": "^0.17.1",
     "bootstrap": "4.0.0-beta.2",
+    "bootswatch": "^4.0.0-beta.2",
     "css": "^2.2.1",
     "font-awesome": "^4.7.0",
     "namor": "^1.0.1",
+    "parse-num": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-format-number": "^1.3.1",
